--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
-  <title>Overview</title>
+  <title>Overview | Comfort in Scripture</title>
   <meta name="description" content="A gentle, offline comfort library with Scripture (KJV).">
 
   <!-- PWA -->
@@ -13,6 +13,8 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon" href="icon-192.png">
+  <link rel="icon" href="icon-192.png" sizes="192x192" type="image/png">
+  <link rel="icon" href="icon-512.png" sizes="512x512" type="image/png">
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
@@ -21,7 +23,6 @@
 
   <header class="topbar">
     <div class="brand">Overview</div>
-    <button id="btnInstall" class="btn install" hidden>Install</button>
   </header>
 
   <main class="container">
